Add spdlog library

--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -52,7 +52,7 @@
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <UseOfMfc>Static</UseOfMfc>
+    <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -193,6 +193,100 @@
     <ClInclude Include="..\external\imgui\include\imstb_rectpack.h" />
     <ClInclude Include="..\external\imgui\include\imstb_textedit.h" />
     <ClInclude Include="..\external\imgui\include\imstb_truetype.h" />
+    <ClInclude Include="..\external\spdlog\include\async.h" />
+    <ClInclude Include="..\external\spdlog\include\async_logger-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\async_logger.h" />
+    <ClInclude Include="..\external\spdlog\include\cfg\argv.h" />
+    <ClInclude Include="..\external\spdlog\include\cfg\env.h" />
+    <ClInclude Include="..\external\spdlog\include\cfg\helpers-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\cfg\helpers.h" />
+    <ClInclude Include="..\external\spdlog\include\common-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\common.h" />
+    <ClInclude Include="..\external\spdlog\include\details\backtracer-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\backtracer.h" />
+    <ClInclude Include="..\external\spdlog\include\details\circular_q.h" />
+    <ClInclude Include="..\external\spdlog\include\details\console_globals.h" />
+    <ClInclude Include="..\external\spdlog\include\details\file_helper-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\file_helper.h" />
+    <ClInclude Include="..\external\spdlog\include\details\fmt_helper.h" />
+    <ClInclude Include="..\external\spdlog\include\details\log_msg-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\log_msg.h" />
+    <ClInclude Include="..\external\spdlog\include\details\log_msg_buffer-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\log_msg_buffer.h" />
+    <ClInclude Include="..\external\spdlog\include\details\mpmc_blocking_q.h" />
+    <ClInclude Include="..\external\spdlog\include\details\null_mutex.h" />
+    <ClInclude Include="..\external\spdlog\include\details\os-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\os.h" />
+    <ClInclude Include="..\external\spdlog\include\details\periodic_worker-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\periodic_worker.h" />
+    <ClInclude Include="..\external\spdlog\include\details\registry-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\registry.h" />
+    <ClInclude Include="..\external\spdlog\include\details\synchronous_factory.h" />
+    <ClInclude Include="..\external\spdlog\include\details\tcp_client-windows.h" />
+    <ClInclude Include="..\external\spdlog\include\details\tcp_client.h" />
+    <ClInclude Include="..\external\spdlog\include\details\thread_pool-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\details\thread_pool.h" />
+    <ClInclude Include="..\external\spdlog\include\details\windows_include.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bin_to_hex.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\args.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\chrono.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\color.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\compile.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\core.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\format-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\format.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\locale.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\os.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\ostream.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\printf.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\ranges.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\bundled\xchar.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\chrono.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\fmt.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\ostr.h" />
+    <ClInclude Include="..\external\spdlog\include\fmt\xchar.h" />
+    <ClInclude Include="..\external\spdlog\include\formatter.h" />
+    <ClInclude Include="..\external\spdlog\include\fwd.h" />
+    <ClInclude Include="..\external\spdlog\include\logger-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\logger.h" />
+    <ClInclude Include="..\external\spdlog\include\pattern_formatter-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\pattern_formatter.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\android_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\ansicolor_sink-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\ansicolor_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\base_sink-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\base_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\basic_file_sink-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\basic_file_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\daily_file_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\dist_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\dup_filter_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\hourly_file_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\mongo_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\msvc_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\null_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\ostream_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\qt_sinks.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\ringbuffer_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\rotating_file_sink-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\rotating_file_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\sink-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\stdout_color_sinks-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\stdout_color_sinks.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\stdout_sinks-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\stdout_sinks.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\syslog_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\systemd_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\tcp_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\wincolor_sink-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\wincolor_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\sinks\win_eventlog_sink.h" />
+    <ClInclude Include="..\external\spdlog\include\spdlog-inl.h" />
+    <ClInclude Include="..\external\spdlog\include\spdlog.h" />
+    <ClInclude Include="..\external\spdlog\include\stopwatch.h" />
+    <ClInclude Include="..\external\spdlog\include\tweakme.h" />
+    <ClInclude Include="..\external\spdlog\include\version.h" />
     <ClInclude Include="include\console.h" />
     <ClInclude Include="include\enums.h" />
     <ClInclude Include="include\hooks.h" />
